Added support for testing in TeamManager